--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "Test",
   "description": "Test",
   "version": "0.0.0",
-  "main": "bot.js",
+  "main": "JMusicBot-0.1.3-Windows.jar",
   "scripts": {
-    "start": "node bot.js"
+    "start": "node JMusicBot-0.1.3-Windows.jar"
   },
   "dependencies": {
     "discord.js": "11.1.0",
